week7-Kubernetes/DO/sample-app/pod-app.yaml
---
kind:       Pod
apiVersion: v1

metadata:
  name:      sample-app
  namespace: django-app
  labels:
    app:     django-sample

spec:
  containers:
  - name:  django-app
    image: "registry.digitalocean.com/sample-django-app/app:latest"
    resources:
      limits:
        cpu:    150m
        memory: 200Mi
      requests:
        cpu:    100m
        memory: 100Mi
    ports:
    - containerPort: 8000
      name:          django-port

  restartPolicy: Always

# command: python manage.py migrate
