week7-Kubernetes/DO/sample-app/service-app.yaml
kind: Service
apiVersion: v1

metadata:
  name:      public-app
  namespace: django-app

spec:
  type: ClusterIP
  ports:
    - name:       public-app-port
      port:       8080
      targetPort: django-port
      protocol:   TCP
  selector:
    app: django-sample
