week7-Kubernetes/DO/sample-app/service-ingress-nginx-controller.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.digitalocean.com/load-balancer-id: 2cfdeee2-6184-4950-9038-46e56f3ad6cd
    meta.helm.sh/release-name: ingress-nginx
    meta.helm.sh/release-namespace: ingress-nginx
  creationTimestamp: "2023-10-23T14:04:48Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.9.3
    helm.sh/chart: ingress-nginx-4.8.2
  name: ingress-nginx-controller
  namespace: ingress-nginx
  resourceVersion: "2337788"
  uid: bc1ac983-696d-4c41-befd-0cc156745fc2
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.245.71.113
  clusterIPs:
  - 10.245.71.113
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - appProtocol: http
    name: http8080
    #nodePort: 30875
    port: 8080
    protocol: TCP
    targetPort: http
  - appProtocol: https
    name: https
    nodePort: 30497
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 159.223.246.50
