week7-Kubernetes/DO/sample-app/ingress-app.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
  name: app-ingress
  namespace: django-app
  annotations:
    cert-manager.io/issuer: letsincrypt-prod

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - itsynd.fedunets.uk
      secretName: letsincrypt-prod-cert

  rules:
    - host: itsynd.fedunets.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-app
                port:
                  number: 8080
# https://kubernetes.io/docs/concepts/services-networking/ingress/#tls

#apiVersion: v1
#kind: Secret
#metadata:
#  name: testsecret-tls
#  namespace: default
#type: kubernetes.io/tls
# The TLS secret must contain keys named 'tls.crt' and 'tls.key' that contain the certificate and private key to use for TLS.
#data:
#  tls.crt: base64 encoded public key content
#  tls.key: base64 encoded private key content
